# ielts-ai-practice-platform

./: .editorconfig  .eslintrc.cjs  .gitignore  COMPREHENSIVE_TESTING_REPORT.md  DEBUG_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ENHANCED.md  DEPLOYMENT_GUIDE_OPTIMIZED.md  DEPLOYMENT_STRATEGY_GUIDE.md  DEPLOYMENT_STRATEGY_SUPABASE.md  DEPLOYMENT_SUCCESS.md  ENHANCEMENTS_COMPLETION_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  FRONTEND_INTEGRATION_SUMMARY.md  IELTS_EXAM_GENERATION_SYSTEM.md  LICENSE  MCP_INTEGRATION_GUIDE.md  Makefile  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_5_PLAN.md  PROGRESS.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  SPEAKING_LISTENING_ENHANCEMENTS.md  SUPABASE_SETUP.md  alembic.ini  cloudflare-pages-config.toml  comprehensive_test.py  context-report.json  debug_all_services.py  deploy-enhanced.ps1  deploy-enhanced.sh  deploy-exam-system.ps1  deploy-exam-system.sh  deploy-production.sh  deploy-supabase-production.sh  (+21 more)
.github/workflows/: deploy.yml
apps/web/: .env.example  COMPETITIVE_ANALYSIS.md  COMPONENT_DEVELOPMENT_PLAN.md  FRONTEND_ANALYSIS_SUMMARY.md  FRONTEND_ISSUES_REPORT.md  PLAYWRIGHT_MCP_INTEGRATION.md  env.example  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  manifest.json  page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/register/: page.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/(dashboard)/ai-tutor/: page.tsx
apps/web/app/(dashboard)/ai-tutor/enhanced/: page.tsx
apps/web/app/(dashboard)/analytics/: page.tsx
apps/web/app/(dashboard)/analytics-dashboard/: page.tsx
apps/web/app/(dashboard)/assessments/: page.tsx
apps/web/app/(dashboard)/assessments/results/[sessionId]/: page.tsx
apps/web/app/(dashboard)/assessments/test/[sessionId]/: page.tsx
apps/web/app/(dashboard)/content/: page.tsx
apps/web/app/(dashboard)/content/create/: page.tsx
apps/web/app/(dashboard)/custom-reports/: page.tsx
apps/web/app/(dashboard)/dashboard/: page.tsx
apps/web/app/(dashboard)/exam-creator/: page.tsx
apps/web/app/(dashboard)/exam-simulator/: page.tsx
apps/web/app/(dashboard)/goals/: page.tsx
apps/web/app/(dashboard)/groups/: page.tsx
apps/web/app/(dashboard)/learning-paths/: page.tsx
apps/web/app/(dashboard)/listening/: page.tsx
apps/web/app/(dashboard)/reading/: page.tsx
apps/web/app/(dashboard)/recommendations/: page.tsx
apps/web/app/(dashboard)/speaking/: page.tsx
apps/web/app/(dashboard)/writing/: page.tsx
apps/web/components/: error-boundary.tsx
apps/web/components/ai-tutor/: enhanced-tutor-interface.tsx
apps/web/components/analytics/: performance-chart.tsx
apps/web/components/ielts/: progress-chart.tsx  speaking-recorder.tsx  writing-editor.tsx
apps/web/components/providers/: auth-provider.tsx  query-provider.tsx  supabase-provider.tsx
apps/web/components/ui/: achievement-badge.tsx  confetti.tsx  loading-spinner.tsx  progress-ring.tsx
apps/web/hooks/: use-websocket.ts
apps/web/lib/: supabase.ts
apps/web/playwright-report/: index.html
apps/web/tests/: component-testing.spec.ts  comprehensive-frontend.spec.ts  diagnostic.spec.ts  homepage.spec.ts  simple-diagnostic.spec.ts
apps/web/types/: auth.ts
cursor/: CHECKS.md  LOOPS.md  MASTER_PLAN.md  TASKS.md  mcp.json
db/migrations/: env.py
db/migrations/versions/: b6b3893922a8_initial_database_schema.py
scripts/: configure-auth.js  context-assistant.js  deploy-with-supabase.js  get-supabase-keys.js  mcp-deploy.js  setup-mcp-servers.js  setup-supabase.js  test-auth.js  test-mcp-integration.js  ui-generator.js
scripts/ci/: check_headers.js  k6_smoke.js  mcp_health.js  mcp_validate.js
services/ai-tutor/: Dockerfile  config.py  main.py  requirements.txt  test_server.py
services/ai-tutor/api/: __init__.py  routes.py  websocket.py
services/ai-tutor/services/: __init__.py  advanced_tutor_service.py  enhanced_learning_path_service.py  learning_path_service.py  recommendation_service.py  speech_processor.py  tutor_service.py
services/api/: Dockerfile  __init__.py  auth.py  config.py  database.py  debug_middleware.py  main.py  pyproject.toml  requirements.txt
services/api/migrations/: add_analytics_tables.py  add_assessment_tables.py  add_content_tables.py  add_learning_tables.py
services/api/routers/: auth.py  health.py  listening.py  reading.py  speaking.py  writing.py
services/api/routes/: __init__.py  analytics.py  assessment.py  auth.py  content.py  learning.py  users.py
services/api/schemas/: analytics.py  content.py  learning.py
services/api/services/: analytics_service.py  assessment_service.py  content_service.py  learning_service.py
services/common/: logging.py
services/exam-generator/: Dockerfile  main.py  requirements.txt
services/listening/: main.py
services/ocr/: Dockerfile  __init__.py  config.py  engines.py  image_processor.py  main.py  models.py  pyproject.toml  requirements.txt  text_processor.py
services/scoring/: Dockerfile  __init__.py  config.py  feature_extractor.py  llm_client.py  main.py  models.py  pyproject.toml  requirements.txt  scoring_service.py
services/speech/: Dockerfile  __init__.py  config.py  enhanced_analysis.py  main.py  models.py  pyproject.toml  requirements.txt  stt.py  websocket_manager.py
supabase/: schema.sql
workers/: Dockerfile  README.md  __init__.py  beat_schedule.py  celery_app.py  config.py  main.py  pyproject.toml  requirements.txt  test_worker.py
workers/tasks/: __init__.py  analytics.py  email.py  file_processing.py  health.py  scoring.py
